# grit

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: app.rs  bootstrap.rs  errors.rs  git.rs  init.rs  lib.rs  opts.rs  prelude.rs
core/src/app/: app.rs  branch.rs  mod.rs
core/src/git/: branch.rs  mod.rs  repo.rs
