[package]
name = "grit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace=true
color-eyre.workspace=true
futures.workspace=true
git-url-parse.workspace=true
git2.workspace=true
quote.workspace=true
ratatui.workspace=true
serde.workspace=true
serde_json.workspace=true
syn.workspace=true
thiserror.workspace=true
tokio.workspace=true
tracing.workspace=true
tracing-subscriber.workspace=true

